--- a/vignettes/my-virtual-herbarium-vignette.Rmd
+++ b/vignettes/my-virtual-herbarium-vignette.Rmd
@@ -15,9 +15,9 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(mvh)
-sample_species <- "Marlierea spruceana"
+#library(mvh)
+#sample_species <- "Marlierea spruceana"
 
-metadata <- search.specimen.metadata(sample_species)
-download.specimen.image(metadata)
+#metadata <- search.specimen.metadata(sample_species)
+#download.specimen.image(metadata)
 ```
