--- a/vignettes/my-virtual-herbarium-vignette.Rmd
+++ b/vignettes/my-virtual-herbarium-vignette.Rmd
@@ -15,9 +15,10 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#library(mvh)
-#sample_species <- "Marlierea spruceana"
+library(mvh)
+sample_species <- "Myrcia nivea"
 
-#metadata <- search.specimen.metadata(sample_species)
-#download.specimen.image(metadata)
+metadata <- search_specimen_metadata(sample_species)
+plot_specimens_by_institution(metadata)
+download_specimen_images(metadata)
 ```
